--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@lottiefiles/dotlottie-react": "^0.17.7",
+    "@react-oauth/google": "^0.12.2",
+    "@stripe/stripe-js": "^8.6.1",
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
+    "flowbite-react": "^0.12.14",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.559.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
